# text_editor

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  simple_text_editor.py  test_simple_text_editor.py
.github/workflows/: python-package-conda.yml
scripts/: check_env_sync.py
src/editor/: main.py
src/editor/components/: menu_bar.py  text_canvas.py
src/editor/components/tests/: __init__.py  test_menu_bar.py  test_text_canvas.py
src/editor/io/: __init__.py  file_manager.py
src/editor/io/tests/: __init__.py  test_file_manager.py
src/editor/models/: rope.py  text_buffer.py
src/editor/models/tests/: __init__.py  test_rope.py  test_text_buffer.py
src/editor/tests/: __init__.py  test_main.py
src/tests/: __init__.py
src/tests/components/: __init__.py  test_text_canvas.py
